fix text-break on id

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -19,7 +19,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 }
 
 .credentialid {
-    font-size: 0.7rem;
+    font-size: 0.6rem;
 }
 
 .scanqr {
